minor corrections improving tests